--- a/doc/CuEira_report.tex
+++ b/doc/CuEira_report.tex
@@ -743,37 +743,37 @@ So what suits best needs to be looked at using a case by case basis by examining
 %Why GPU for GWAS
 GPUs are good for interaction algorithms because most methods consider each combination independently and also in this case that LR consists of linear algebra operations. A new combination can be transferred while another is calculated. Linear algebra with sufficiently large matrices and vectors work very well on GPUs\cite{cublas, cuda}. Several studies got high gains from implementing their algorithms on GPU\cite{gwis,gboost,gmdr_gpu,cuda_lr,genie_2012,plink_gpu}. However most studies had CPU versions that were not parallel so it is likely that the gains would have been less if they would have been compared to an optimized and parallel CPU version, especially if a Xeon Phi co-processor was used. One study did make a comparison of a CPU cluster version and a GPU version of their algorithm, they found that 16 CPU nodes had the same performance as a single GTX 280 card\cite{jiang_accelerating}.
 
-%\subsection{Clusters}
-%\label{clusers}
+\subsection{Clusters}
+\label{clusers}
 
-%\begin{figure}[h]
-%    \centering
-%    \includegraphics[width=10cm]{Cluster.png}
-%    \caption{Basic overview of a cluster}
-%    \label{fig:cluster}
-%\end{figure}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=10cm]{Cluster.png}
+    \caption{Basic overview of a cluster}
+    \label{fig:cluster}
+\end{figure}
 
-%Clusters are collections of computers that can work together in several ways and are so tightly connected that they can usually be viewed as a single system. They communicate over a shared network but have separate memory and processors. Storage is usually shared. A computer in a cluster is called a \emph{node}. \cite{intro_hpc, introduction_hpc_hager}
+Clusters are collections of computers that can work together in several ways and are so tightly connected that they can usually be viewed as a single system. They communicate over a shared network but have separate memory and processors. Storage is usually shared. A computer in a cluster is called a \emph{node}. \cite{intro_hpc, introduction_hpc_hager}
 
-%various programming models, shared memory and so on
-%shared memory, cache coherrency and stuff
+various programming models, shared memory and so on
+shared memory, cache coherrency and stuff
 
-%mpi is commonly used for clusters\cite{introduction_hpc_hager}
+mpi is commonly used for clusters\cite{introduction_hpc_hager}
 
-%top 500\cite{TOP500}
+top 500\cite{TOP500}
 
-%Few clusters used GPUs before 2009 but now mix of GPUs and CPUs are common among the top clusters. It was driven largely by demand for power saving while still giving high performance. The GPUs can do the heavy computation while other parts are used on CPU. \cite{introduction_hpc_hager}
-%Something about Intel MIC
+Few clusters used GPUs before 2009 but now mix of GPUs and CPUs are common among the top clusters. It was driven largely by demand for power saving while still giving high performance. The GPUs can do the heavy computation while other parts are used on CPU. \cite{introduction_hpc_hager}
+Something about Intel MIC
 
-%Flops is not everything, bad performance compare to theoretical maximum
-%Stuck in network, hard drives, etc. Latency
-%Very few programs scale to the fastest clusters, peta scale.
+Flops is not everything, bad performance compare to theoretical maximum
+Stuck in network, hard drives, etc. Latency
+Very few programs scale to the fastest clusters, peta scale.
 
-%Tianhe 2 is current top. Theoretical performance 54.9 PetaFlops.\cite{TOP500}
-%Max achived with LinPack 33 PetaFlops
-%60\% efficiency
+Tianhe 2 is current top. Theoretical performance 54.9 PetaFlops.\cite{TOP500}
+Max achived with LinPack 33 PetaFlops
+60\% efficiency
 
-%\cite{introduction_hpc_hager}
+\cite{introduction_hpc_hager}
 
 \clearpage
 \section{Performance Measures}
@@ -1177,36 +1177,36 @@ The data structure for the individuals in CuEira likely needs to be changed, it 
   Minor allele frequency, the frequency of the least common allele.
 \item[RF] \hfill \\
   Random Forest
-%\item[MDR] \hfill \\
-%  Random Forest
-%\item[OR] \hfill \\
-%  Random Forest
-%\item[RR] \hfill \\
-%  Random Forest
-%\item[RERI] \hfill \\
-%  Random Forest
-%\item[AP] \hfill \\
-%  Random Forest
-%\item[SI] \hfill \\
-%  Random Forest
-%\item[GPU] \hfill \\
-%  Random Forest
-%\item[CPU] \hfill \\
-%  Random Forest
-%\item[SM] \hfill \\
-%  Streaming multiprocessor
-%\item[SIMD] \hfill \\
-%  Random Forest
-%\item[MIMD] \hfill \\
-%  Random Forest
-%\item[SIMT] \hfill \\
-%  Random Forest
-%\item[SISD] \hfill \\
-%  Random Forest
-%\item[LR] \hfill \\
-%  Random Forest
-%\item[MIDSD] \hfill \\
-%  Random Forest
+\item[MDR] \hfill \\
+  Random Forest
+\item[OR] \hfill \\
+  Random Forest
+\item[RR] \hfill \\
+  Random Forest
+\item[RERI] \hfill \\
+  Random Forest
+\item[AP] \hfill \\
+  Random Forest
+\item[SI] \hfill \\
+  Random Forest
+\item[GPU] \hfill \\
+  Random Forest
+\item[CPU] \hfill \\
+  Random Forest
+\item[SM] \hfill \\
+  Streaming multiprocessor
+\item[SIMD] \hfill \\
+  Random Forest
+\item[MIMD] \hfill \\
+  Random Forest
+\item[SIMT] \hfill \\
+  Random Forest
+\item[SISD] \hfill \\
+  Random Forest
+\item[LR] \hfill \\
+  Random Forest
+\item[MIDSD] \hfill \\
+  Random Forest
 
 % a t g c
 \end{description}
